# rust-avr-imu-echo

./: .gitignore  Cargo.toml
src/: main.rs  ring_buffer.rs
src/imu/: bmm150.rs  bmp280.rs  bmp388.rs  comm.rs  i2c.rs  icm42688.rs  mod.rs
src/imu/mpu9250/: gyro.rs  mag.rs  mod.rs
