[package]
name = "imu-echo"
version = "0.1.0"
authors = ["Vasilii Nechaev <vn.glider@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "imu-echo"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.2"
nb = "0.1.2"
embedded-hal = "0.2.7"
libm = "0.2.6"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "c6a3d997561722f01fef9b62baeccab425b178a9"
features = ["arduino-nano"]

[dependencies.void]
version = "1.0.2"
default-features = false

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.dev.package.compiler_builtins]
overflow-checks = false

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
